Added install targets with options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,13 @@ set(HARBOR_USER_TEST_INCLUDES "" CACHE STRING "User headers for the test suite")
 set(HARBOR_USER_TEST_LINKS "" CACHE STRING "User libraries for the test suite")
 option(HARBOR_USER_TEST_SKIP_HARBOR "Remove Harbor tests from the suite" OFF)
 
+# Installation options
+option(HARBOR_INSTALL "Create install targets" ON)
+option(HARBOR_INSTALL_LIB "Create install target for the Harbor library" ON)
+option(HARBOR_INSTALL_EXEC "Create install target for the Harbor executable" ON)
+option(HARBOR_INSTALL_TEST "Create install target for the test suite" ON)
+option(HARBOR_INSTALL_DATA "Create install target for Harbor's data folder" ON)
+
 # Dependency options
 option(HARBOR_USE_SCRIPTING "Compile the scripting engines" ON)
 option(HARBOR_USE_SCRIPTING_SQUIRREL "Compile Squirrel with Harbor" ON)
@@ -57,6 +64,20 @@ option(HARBOR_USE_VIDEO "Compile the video engines" ON)
 option(HARBOR_USE_VIDEO_SDL "Compile the SDL renderer with Harbor" ON)
 option(HARBOR_USE_VIDEO_OPENGL "Compile the OpenGL renderer with Harbor" ON)
 
+# Dependency install options
+option(HARBOR_INSTALL_SQUIRREL "Install Squirrel alongside Harbor" ON)
+option(HARBOR_INSTALL_LUA "Install Lua alongside Harbor" ON)
+option(HARBOR_INSTALL_SDL "Install SDL alongside Harbor" ON)
+option(HARBOR_INSTALL_SDL_IMAGE "Install SDL_image alongside Harbor" ON)
+option(HARBOR_INSTALL_SDL_TTF "Install SDL_ttf alongside Harbor" ON)
+option(HARBOR_INSTALL_FREETYPE "Install FreeType alongside Harbor" ON)
+
+# Code quality options
+option(WARNINGS "Enable compilation warnings" OFF)
+option(WERROR "Treat all warnings as errors" OFF)
+option(HARBOR_COVERAGE "Prepare coverage (Debug builds with GCC only)" ON)
+
+# FIXME: use cmake_dependent_option for this
 # Dependency options overrides
 macro(depends parent dependency)
   if(NOT ${parent})
@@ -69,10 +90,23 @@ depends(HARBOR_USE_SCRIPTING HARBOR_USE_SCRIPTING_LUA)
 depends(HARBOR_USE_VIDEO HARBOR_USE_VIDEO_SDL)
 depends(HARBOR_USE_VIDEO HARBOR_USE_VIDEO_OPENGL)
 
-# Code quality options
-option(WARNINGS "Enable compilation warnings" OFF)
-option(WERROR "Treat all warnings as errors" OFF)
-option(HARBOR_COVERAGE "Prepare coverage (Debug builds with GCC only)" ON)
+depends(HARBOR_INSTALL HARBOR_INSTALL_LIB)
+depends(HARBOR_INSTALL HARBOR_INSTALL_EXEC)
+depends(HARBOR_INSTALL HARBOR_INSTALL_TEST)
+depends(HARBOR_INSTALL HARBOR_INSTALL_DATA)
+depends(HARBOR_BUILD_EXEC HARBOR_INSTALL_EXEC)
+depends(HARBOR_BUILD_TEST HARBOR_INSTALL_TEST)
+
+depends(HARBOR_USE_SCRIPTING_SQUIRREL HARBOR_INSTALL_SQUIRREL)
+depends(HARBOR_USE_SCRIPTING_LUA HARBOR_INSTALL_LUA)
+depends(HARBOR_USE_VIDEO HARBOR_INSTALL_SDL_IMAGE)
+depends(HARBOR_USE_VIDEO HARBOR_INSTALL_SDL_TTF)
+depends(HARBOR_INSTALL_SDL_TTF HARBOR_INSTALL_FREETYPE)
+depends(HARBOR_INSTALL HARBOR_INSTALL_SQUIRREL)
+depends(HARBOR_INSTALL HARBOR_INSTALL_LUA)
+depends(HARBOR_INSTALL HARBOR_INSTALL_SDL_IMAGE)
+depends(HARBOR_INSTALL HARBOR_INSTALL_SDL_TTF)
+depends(HARBOR_INSTALL HARBOR_INSTALL_FREETYPE)
 
 # ============================================================================
 #    Library and executable generation
@@ -358,11 +392,14 @@ if(HARBOR_USE_SCRIPTING_SQUIRREL)
   else(SQUIRREL_FOUND)
     message(STATUS "Compiling Squirrel from source")
 
-    #set(SQ_DISABLE_INSTALLER ON CACHE BOOL "" FORCE)    # <- Buggy (FIXME)
-
-    if(NOT BUILD_SHARED_LIBS)
+    set(SQ_DISABLE_INSTALLER ON)
+    if(BUILD_SHARED_LIBS)
+      set(DISABLE_STATIC ON)
+      set(DISABLE_DYNAMIC OFF)
+    else(BUILD_SHARED_LIBS)
+      set(DISABLE_STATIC OFF)
       set(DISABLE_DYNAMIC ON)
-    endif(NOT BUILD_SHARED_LIBS)
+    endif(BUILD_SHARED_LIBS)
 
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/squirrel)
 
@@ -399,31 +436,54 @@ endif(EMSCRIPTEN)
 # Static
 # cmake -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_C_COMPILER=x86_64-w64-mingw32-gcc -DCMAKE_CXX_COMPILER=x86_64-w64-mingw32-g++ -DCMAKE_TOOLCHAIN_FILE=~/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-mingw-static ..
 
-if(WIN32 OR UBUNTU_TOUCH)
-  install(TARGETS harbor_lib DESTINATION ".")
-  install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ".")
-  if(HARBOR_BUILD_EXEC)
-    install(TARGETS harbor DESTINATION ".")
-  endif(HARBOR_BUILD_EXEC)
-  if(HARBOR_BUILD_TEST)
-    install(TARGETS run_tests DESTINATION ".")
-  endif(HARBOR_BUILD_TEST)
-else(WIN32 OR UBUNTU_TOUCH)
-  install(TARGETS harbor_lib DESTINATION "lib")
-  if(HARBOR_BUILD_EXEC)
-    install(TARGETS harbor DESTINATION "bin")
-  endif(HARBOR_BUILD_EXEC)
-  if(HARBOR_BUILD_TEST)
-    install(TARGETS run_tests DESTINATION "bin")
-  endif(HARBOR_BUILD_TEST)
-endif(WIN32 OR UBUNTU_TOUCH)
+if(HARBOR_INSTALL)
+  if(WIN32 OR UBUNTU_TOUCH)
+    if(HARBOR_INSTALL_LIB)
+      install(TARGETS harbor_lib DESTINATION ".")
+    endif(HARBOR_INSTALL_LIB)
+    if(HARBOR_INSTALL_DATA)
+      install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ".")
+    endif(HARBOR_INSTALL_DATA)
+    if(HARBOR_INSTALL_EXEC)
+      install(TARGETS harbor DESTINATION ".")
+    endif(HARBOR_INSTALL_EXEC)
+    if(HARBOR_INSTALL_TEST)
+      install(TARGETS run_tests DESTINATION ".")
+    endif(HARBOR_INSTALL_TEST)
+  else(WIN32 OR UBUNTU_TOUCH)
+    if(HARBOR_INSTALL_LIB)
+      install(TARGETS harbor_lib DESTINATION "lib")
+    endif(HARBOR_INSTALL_LIB)
+    if(HARBOR_INSTALL_DATA)
+      install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION "share/supertux-meltdown")
+    endif(HARBOR_INSTALL_DATA)
+    if(HARBOR_INSTALL_EXEC)
+      install(TARGETS harbor DESTINATION "bin")
+    endif(HARBOR_INSTALL_EXEC)
+    if(HARBOR_INSTALL_TEST)
+      install(TARGETS run_tests DESTINATION "bin")
+    endif(HARBOR_INSTALL_TEST)
+  endif(WIN32 OR UBUNTU_TOUCH)
 
-if(UBUNTU_TOUCH AND HARBOR_MAKE_EXEC)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mk/clickable/manifest.json.in ${CMAKE_CURRENT_BINARY_DIR}/install/manifest.json)
-  configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mk/clickable/harbor.desktop.in "install/harbor.desktop")
-  install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/mk/clickable/harbor.apparmor DESTINATION ".")
-  target_compile_definitions(harbor PUBLIC DATA_ROOT="./data")
-endif(UBUNTU_TOUCH AND HARBOR_MAKE_EXEC)
+  if(UBUNTU_TOUCH AND HARBOR_MAKE_EXEC)
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mk/clickable/manifest.json.in ${CMAKE_CURRENT_BINARY_DIR}/install/manifest.json)
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mk/clickable/harbor.desktop.in "install/harbor.desktop")
+    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/mk/clickable/harbor.apparmor DESTINATION ".")
+    target_compile_definitions(harbor PUBLIC DATA_ROOT="./data")
+  endif(UBUNTU_TOUCH AND HARBOR_MAKE_EXEC)
+
+  # Install dependencies, if compiled from source and dynamically linked
+  if(BUILD_SHARED_LIBS)
+    macro(install_dep target_name option_name)
+      if(TARGET ${target_name} AND ${option_name})
+        install(TARGETS ${target_name})
+      endif()
+    endmacro()
+
+    install_dep(squirrel HARBOR_INSTALL_SQUIRREL)
+    install_dep(sqstdlib HARBOR_INSTALL_SQUIRREL)
+  endif(BUILD_SHARED_LIBS)
+endif(HARBOR_INSTALL)
 
 # ============================================================================
 #    Packaging
