Fixes for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,11 +293,12 @@ else(EMSCRIPTEN)
   if(SDL2_FOUND)
     message(STATUS "Using system libraries for SDL2: ${SDL2_LIBRARIES}")
     if(VCPKG_TARGET_TRIPLET)
-      if(BUILD_SHARED_LIBS)
+      # FIXME: Is there SDL2::SDL2-static on non-Windows vcpkg builds?
+      if(BUILD_SHARED_LIBS OR WIN32)
         target_link_libraries(harbor_lib PUBLIC SDL2::SDL2)
-      else(BUILD_SHARED_LIBS)
+      else(BUILD_SHARED_LIBS OR WIN32)
         target_link_libraries(harbor_lib PUBLIC SDL2::SDL2-static)
-      endif(BUILD_SHARED_LIBS)
+      endif(BUILD_SHARED_LIBS OR WIN32)
       if(WIN32 AND HARBOR_BUILD_EXEC)
         target_link_libraries(harbor PUBLIC -lmingw32 SDL2::SDL2main)
       endif(WIN32 AND HARBOR_BUILD_EXEC)
