Fixed source builds for PhysFS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -426,20 +426,18 @@ if(HARBOR_USE_FS)
   else(PHYSFS_FOUND)
     message(STATUS "Compiling PhysFS from source")
 
+    #FIXME: Disable installation targets entirely
+    set(PHYSFS_TARGETNAME_UNINSTALL "physfs_uninstall" CACHE STRING "" FORCE)
+
     option(PHYSFS_BUILD_TEST OFF)
     option(PHYSFS_BUILD_DOCS OFF)
-    message(STATUS "PHYSFS_BUILD_STATIC=${PHYSFS_BUILD_STATIC}")
     if(BUILD_SHARED_LIBS)
-      set(PHYSFS_BUILD_SHARED ON)
-      set(PHYSFS_BUILD_STATIC OFF)
+      set(PHYSFS_BUILD_SHARED ON CACHE BOOL "" FORCE)
+      set(PHYSFS_BUILD_STATIC OFF CACHE BOOL "" FORCE)
     else(BUILD_SHARED_LIBS)
-      message(STATUS "PHYSFS_BUILD_STATIC=${PHYSFS_BUILD_STATIC}")
-      set(PHYSFS_BUILD_SHARED OFF)
-      message(STATUS "PHYSFS_BUILD_STATIC=${PHYSFS_BUILD_STATIC}")
-      set(PHYSFS_BUILD_STATIC ON)
-      message(STATUS "PHYSFS_BUILD_STATIC=${PHYSFS_BUILD_STATIC}")
+      set(PHYSFS_BUILD_SHARED OFF CACHE BOOL "" FORCE)
+      set(PHYSFS_BUILD_STATIC ON CACHE BOOL "" FORCE)
     endif(BUILD_SHARED_LIBS)
-    message(STATUS "PHYSFS_BUILD_STATIC=${PHYSFS_BUILD_STATIC}")
 
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/physfs)
 
