Fixed GTest to include GMock + coverage fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ option(HARBOR_BUILD_TEST "Build a test suite" ON)
 set(HARBOR_USER_TEST_FILES "" CACHE STRING "User C++ files for the test suite")
 set(HARBOR_USER_TEST_INCLUDES "" CACHE STRING "User headers for the test suite")
 set(HARBOR_USER_TEST_LINKS "" CACHE STRING "User libraries for the test suite")
+set(HARBOR_USER_TEST_COV "harbor_lib" CACHE STRING "Libraries to compile with coverage")
 option(HARBOR_USER_TEST_SKIP_HARBOR "Remove Harbor tests from the suite" OFF)
 
 # Installation options
@@ -184,8 +185,10 @@ if(HARBOR_BUILD_TEST)
 
     # Coverage
     if(CMAKE_COMPILER_IS_GNUCXX AND HARBOR_COVERAGE)
-      target_compile_options(harbor_lib PUBLIC -fprofile-arcs -ftest-coverage)
-      target_link_options(harbor_lib PUBLIC -lgcov --coverage)
+      foreach(covered_lib "${HARBOR_USER_TEST_COV}")
+        target_compile_options(${covered_lib} PUBLIC -fprofile-arcs -ftest-coverage)
+        target_link_options(${covered_lib} PUBLIC -lgcov --coverage)
+      endforeach()
     endif()
   else()
     set(HARBOR_BUILD_TEST OFF CACHE BOOL "Disabled because no test files are compiled" FORCE)
@@ -252,16 +255,16 @@ endif(WERROR)
 # ----------------------------------------------------------------------------
 
 if(HARBOR_BUILD_TEST)
-  find_package(GTest)
+  find_package(GTest CONFIG)
   if(GTEST_FOUND)
     message(STATUS "Using system libraries for GTest: ${GTEST_LIBRARIES}")
-    target_link_libraries(run_tests PUBLIC ${GTEST_BOTH_LIBRARIES} pthread)
+    target_link_libraries(run_tests PUBLIC ${GTEST_BOTH_LIBRARIES} ${GMOCK_LIBRARY} pthread)
     target_include_directories(run_tests PUBLIC ${GTEST_INCLUDE_DIRS})
   else(GTEST_FOUND)
     message(STATUS "Compiling GTest from source")
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/gtest)
-    target_link_libraries(run_tests PUBLIC gtest gtest_main)
-    add_dependencies(run_tests gtest gtest_main)
+    target_link_libraries(run_tests PUBLIC gtest gtest_main gmock)
+    add_dependencies(run_tests gtest gtest_main gmock)
   endif(GTEST_FOUND)
 endif(HARBOR_BUILD_TEST)
 
