Disable PNG tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,6 +266,7 @@ if(HARBOR_BUILD_TEST)
     target_include_directories(run_tests PUBLIC ${GTEST_INCLUDE_DIRS})
   else(GTEST_FOUND)
     message(STATUS "Compiling GTest from source")
+    set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/gtest)
     target_link_libraries(run_tests PUBLIC gtest gtest_main gmock)
     add_dependencies(run_tests gtest gtest_main gmock)
@@ -321,6 +322,8 @@ else(EMSCRIPTEN)
     endif(VCPKG_TARGET_TRIPLET)
   else(SDL2_FOUND)
     message(STATUS "Compiling SDL2 from source")
+    set(SDL2_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
+    set(SDL2_DISABLE_UNINSTALL ON CACHE BOOL "" FORCE)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2)
     if(BUILD_SHARED_LIBS)
       target_link_libraries(harbor_lib PUBLIC SDL2)
@@ -348,6 +351,7 @@ if(HARBOR_USE_VIDEO)
       target_include_directories(harbor_lib PUBLIC ${SDL2_IMAGE_INCLUDE_DIRS})
     else(SDL2_IMAGE_FOUND)
       message(STATUS "Compiling SDL2_image from source")
+      set(PNG_TESTS OFF CACHE BOOL "" FORCE)
       add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_image)
       target_link_libraries(harbor_lib PUBLIC SDL2_image)
       add_dependencies(harbor_lib SDL2_image)
@@ -381,10 +385,12 @@ if(HARBOR_USE_VIDEO)
       # Not required here, but we need to know whether to compile it or not
       find_package(Freetype)
       if(NOT FREETYPE_FOUND)
+        set(SKIP_INSTALL_ALL ON CACHE BOOL "" FORCE)
         add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/freetype)
         add_library(Freetype::Freetype ALIAS freetype)
       endif(NOT FREETYPE_FOUND)
 
+      set(SDL2_TTF_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
       add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_ttf)
       target_link_libraries(harbor_lib PUBLIC SDL2_ttf)
       target_include_directories(harbor_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/external/SDL2_ttf)
@@ -446,6 +452,7 @@ if(HARBOR_USE_FS)
       set(PHYSFS_BUILD_STATIC ON CACHE BOOL "" FORCE)
     endif(BUILD_SHARED_LIBS)
 
+    set(PHYSFS_DISABLE_INSTALL ON CACHE BOOL "" FORCE)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/physfs)
 
     if(BUILD_SHARED_LIBS)
