Android compilation begin
Remember to disable the if(ANDROID) in SDL2_ttf's CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,7 +299,7 @@ endif()
 if(EMSCRIPTEN)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_SDL=2")
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sUSE_SDL=2")
-else(EMSCRIPTEN)
+elseif(NOT ANDROID)
   find_package(SDL2)
   if(SDL2_FOUND)
     message(STATUS "Using system libraries for SDL2: ${SDL2_LIBRARIES}")
@@ -337,9 +337,9 @@ else(EMSCRIPTEN)
       add_dependencies(harbor_lib SDL2main)
     endif(WIN32)
   endif(SDL2_FOUND)
-endif(EMSCRIPTEN)
+endif()
 
-if(HARBOR_USE_VIDEO)
+if(HARBOR_USE_VIDEO AND NOT ANDROIDDD)
   if(EMSCRIPTEN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -sUSE_SDL_IMAGE=2 -sSDL2_IMAGE_FORMATS='[\"png\",\"jpg\",\"tiff\"]' -sUSE_SDL_TTF=2")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sUSE_SDL_IMAGE=2 -sSDL2_IMAGE_FORMATS='[\"png\",\"jpg\",\"tiff\"]' -sUSE_SDL_TTF=2 --use-preload-plugins")
@@ -397,7 +397,7 @@ if(HARBOR_USE_VIDEO)
       add_dependencies(harbor_lib SDL2_ttf)
     endif(SDL2_TTF_FOUND OR sdl2-ttf_FOUND)
   endif(EMSCRIPTEN)
-endif(HARBOR_USE_VIDEO)
+endif(HARBOR_USE_VIDEO AND NOT ANDROIDDD)
 
 if(HARBOR_USE_SCRIPTING_SQUIRREL)
   # TODO
@@ -536,8 +536,8 @@ if(HARBOR_INSTALL)
       endif()
     endmacro()
 
-    install_dep(squirrel HARBOR_INSTALL_SQUIRREL)
-    install_dep(sqstdlib HARBOR_INSTALL_SQUIRREL)
+    #install_dep(squirrel HARBOR_INSTALL_SQUIRREL)
+    #install_dep(sqstdlib HARBOR_INSTALL_SQUIRREL)
   endif(BUILD_SHARED_LIBS)
 endif(HARBOR_INSTALL)
 
