Disable non-system builds and one GUI test for CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,8 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [Debug, Release]
-        dependencies: [system, vcpkg, source]
+        #dependencies: [system, vcpkg, source]
+        dependencies: [system]
         include:
           - build_type: Debug
             coverage: ON
