--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       - name: Install tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake git libgl1-mesa-dev
+          sudo apt-get install -y build-essential cmake git libgl1-mesa-dev \
+            lcov
 
       - name: Install system dependencies
         if: ${{ matrix.dependencies == 'system' }}
@@ -86,13 +87,15 @@ jobs:
         working-directory: build
         run: cpack -G TGZ
 
-      - uses: actions/upload-artifact@v2
+      - name: Upload build
+        uses: actions/upload-artifact@v2
         with:
           name: "Harbor_x64-linux_${{ matrix.build_type }}_${{ matrix.dependencies }}"
           path: build/*.tar.gz
           if-no-files-found: ignore
 
-      - uses: actions/upload-artifact@v2
+      - name: Upload coverage
+        uses: actions/upload-artifact@v2
         if: ${{ matrix.coverage }}
         with:
           name: "Harbor_coverage"
